# deep_learning

./: .gitignore  README.md
autoencoder/: autoencoder.py  config.py  config_parser.py  main.py  neural_network.py  preprocess.py  requirements.txt  visualize.py
conv_network/: Cargo.toml
conv_network/src/: main.rs  neural_network.rs  visualize.rs
conv_network/src/neural_network/: activations.rs  config.json  config_parser.rs  layers.rs  losses.rs  neural_network.rs  regularizer.rs
conv_network/src/neural_network/layers/: conv.rs  dense.rs  layer.rs  reshape_layer.rs  softmax.rs
neural_network/src/: data_generator.rs  main.rs
neural_network/src/neural_network/: config.json  config_parser.rs  layers.rs  losses.rs  neural_network.rs
neural_network/src/neural_network/layers/: dense.rs  layer.rs  softmax.rs
recurrent_neural_network/: .gitignore  activations.py  config_parser.py  data_generator.py  layers.py  loss.py  main.py  neural_network.py
recurrent_neural_network/config_files/: config.py  config_2.py
