[package]
name = "deep_learning"
version = "0.1.0"
authors = ["Sebastian Aas <sebastian.aas@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayfire = "3.8.0"
image = "0.23.12"
ndarray = "0.14.0"
ndarray-npy = "0.7.1"
ndarray-rand = "0.13.0"
ndarray-stats = "0.4.0"
pbr = "1.0.4"
plotters = "0.3.0"
serde = {version="1.0.119", features=["derive"]}
serde_json = "1.0.61"
